--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="hero-content">
                     <h1>Natiral Forest <span>Html / Css</span></h1>
                     <div class="hero-content__p">Натиральный сайт брат зуб даю</div>
-                    <button class="button-start">Одобряю</button>
+                    <button class="button-start">Одобряю!</button>
                 </div>
             </div>
             <div class="layers__item layer-4">
